compiler/testData/diagnostics/tests/typealias/typeAliasConstructorForInterface.fir.kt
interface IFoo

typealias Test = IFoo

val testAsFunction = <!UNRESOLVED_REFERENCE!>Test<!>()
val testAsValue = Test